<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="@dimen/dp_250"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/shape_bg_outgoing"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical" >


        <TextView
            android:textStyle="bold"
            android:padding="@dimen/dp_15"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quality" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:id="@+id/rgVideoQuality"
            android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatRadioButton
            android:textStyle="bold"
            android:button="@drawable/pop_up_window_selector_item"
            android:padding="@dimen/dp_15"
            android:checked="true"
            android:id="@+id/cb1QualityPopUp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:textStyle="bold"
            android:button="@drawable/pop_up_window_selector_item"
            android:padding="@dimen/dp_15"
            android:id="@+id/cb2QualityPopUp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/standard" />


        <androidx.appcompat.widget.AppCompatRadioButton
            android:textStyle="bold"
            android:button="@drawable/pop_up_window_selector_item"
            android:padding="@dimen/dp_15"
            android:id="@+id/cb3QualityPopUp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hd" />
        </RadioGroup>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>