<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_45"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/sp_16"
                android:fontFamily="@font/din_black_alternate"
                android:textStyle="bold"
                android:textSize="@dimen/dp_20"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_genre_according_to_your_interest"
                android:layout_marginTop="@dimen/dp_5"
                android:textColor="@color/white"
                android:fontFamily="@font/din_medium"
                android:textSize="@dimen/_16sdp"/>


            <RelativeLayout
                android:layout_marginTop="@dimen/dp_35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            >



                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvInterest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:visibility="gone"
                    android:id="@+id/tvNoData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data" />

            </RelativeLayout>
            <LinearLayout
                android:id="@+id/lytNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/dp_35">


                <View
                    android:layout_width="0dp"
                    android:layout_weight=".2"
                    android:layout_height="match_parent"/>


                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="0dp"
                    android:layout_weight=".6"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_orange"
                    android:layout_margin="@dimen/dp_4"
                    android:text="@string/browse"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_16"
                    android:fontFamily="@font/din_medium"
                    android:textAllCaps="true"
                    android:textColor="@color/white"/>

                <View
                    android:layout_width="0dp"
                    android:layout_weight=".2"
                    android:layout_height="match_parent"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>


