<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_8">

    <LinearLayout
        android:layout_margin="@dimen/dp_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_graw_pop"
        android:elevation="5dp"
        android:orientation="vertical">




            <TextView
                android:layout_gravity="center_horizontal"
                android:id="@+id/tvTitle1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_10"
                android:paddingHorizontal="@dimen/dp_20"
                android:textColor="@color/white"
                android:text="@string/declaration"
                android:fontFamily="@font/din_black_alternate"
                android:textSize="@dimen/sp_22"
                android:textStyle="bold"
                />

            <EditText
                android:layout_gravity="center_horizontal"
                android:id="@+id/etProfile"
                android:hint="@string/add_profile"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_10"
                android:fontFamily="@font/din_medium"
               android:padding="@dimen/dp_10"
                android:background="@drawable/round_corner_white"
                android:textColor="@color/grey_lite"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_10"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dp_40"
                android:minWidth="@dimen/dp_120"
                android:layout_marginTop="@dimen/dp_5"
                android:fontFamily="@font/din_medium"
                android:layout_marginBottom="@dimen/dp_5"
                android:textColor="@color/white"
                android:background="@drawable/round_corner_orange"
                android:text="@string/delete" />

            <View
                android:layout_width="@dimen/dp_18"
                android:layout_height="match_parent"
                android:background="@color/transparent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btCancel"
                android:textColor="@color/black"
                android:minHeight="@dimen/dp_40"
                android:background="@drawable/round_corner_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/din_medium"
                android:minWidth="@dimen/dp_120"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:text="@string/cancel" />

        </LinearLayout>

    </LinearLayout>

    </FrameLayout>

</layout>